@@ -59,6 +59,8 @@ Current Version (5.1-dev, SVN trunk):
 
 - WMS: image/wbmp should be image/vnd.wap.wbmp (#2360)
 
+- SOS: support maxfeatures for GetObservation requests (#2353)
+
 
 Version 5.0.0 (2007-09-17)
 --------------------------
